# dcagent

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard.py  price_comparison_test.py  pyproject.toml  run_ai_demo.sh  run_dashboard.sh  run_dashboard_demo.sh  run_dcagent.sh  test_price.py
dcagent/: agent.py  config.py  demo_ai_advisor.py  main.py
dcagent/abis/: gauge.json  pool.json  router.json
dcagent/action_providers/: aerodrome_provider.py
dcagent/strategies/: base_strategy.py  dca_strategy.py  dip_strategy.py  yield_strategy.py
dcagent/utils/: aerodrome.py  agent_kit.py  blockchain.py  claude_advisor.py  gas_utils.py  logging_utils.py  pyth_utils.py
