[project]
name = "dc-agent"
version = "0.1.0"
description = "Smart cbBTC DCA Agent"
authors = [
    {name = "Bot Mechanic",email = "web3.dakar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "web3==5.31.1",
    "python-dotenv>=1.0.0",
    "coinbase-agentkit>=0.1.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "requests>=2.28.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
flake8 = "^7.1.2"

